--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,6 @@
    },
    "manifest_version": 2,
    "name": "TinyURL Maker",
-   "permissions": [ "tabs", "<all_urls>" ],
+   "permissions": [ "tabs", "<all_urls>", "storage" ],
    "version": "1.1"
 }
